--- a/_layouts/authors.html
+++ b/_layouts/authors.html
@@ -1,16 +1,14 @@
 ---
-title: Blogs
-permalink: /blogs/
+layout: default
 ---
 
+{% assign posts = site.posts | where:'author', page.slug %}
 <div class="grid-container">
   <div class="grid-x align-top">
-    <h1>Blog</h1>
-    {% for post in site.posts %}
-    {% assign author = site.authors | where: 'slug', post.author | first %}
+    <h1>{{ page.title }}'s Posts</h1>
+    {% for post in posts %}
     <div class="cell" style="background:#efefef; margin: 10px 0; padding: 10px">
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <address class="author">{{ author.title }}</address>
       {{ post.excerpt | strip_html }}
     </div>
     {% endfor %}
