--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,12 @@
 layout: default
 ---
 
+{% assign author = site.authors | where: 'slug', page.author | first %}
 <div class="grid-container">
   <div class="grid-x align-top">
     <div class="cell">
       <h1>{{ page.title }}</h1>
-      <address class="author">{{ page.author }}</address>
+      <address class="author">{{ author.title }}</address>
       {{ page.content | markdownify }}
     </div>
   </div>
