--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <div class="grid-x align-top">
     <div class="cell">
       <h1>{{ page.title }}</h1>
-      <address class="author">{{ author.title }}</address>
+      <address class="author"><a href="{{ author.url }}">{{ author.title }}</a></address>
       {{ page.content | markdownify }}
     </div>
   </div>
