--- a/_css/foundation/_settings.scss
+++ b/_css/foundation/_settings.scss
@@ -95,6 +95,7 @@ $global-padding: 1rem;
 $global-position: 1rem;
 $global-weight-thin: 300;
 $global-weight-normal: normal;
+$global-weight-semi-bold: 500;
 $global-weight-medium: 600;
 $global-weight-bold: bold;
 $global-radius: 4px;
