--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
           <div class="footerbottom__first--content">
             <h6>About</h6>
             <ul>
-              <li><a href="/company">Company</a></li>
+              <li><a href="/company/">Company</a></li>
               <li><a class="mail" href="mailto:press@esteemed.io">press@esteemed.io</a></li>
             </ul>
           </div>
@@ -35,7 +35,7 @@
         <div class="footerbottom__forth cell small-6 large-3">
         </div>
       </div>
-      <div class="footer__copyright">Copyright&copy; {{ "now" | date: "%Y" }} Esteemed. <a href="/privacy-policy">Privacy</a> | <a href="/terms-use/">Terms</a></div>
+      <div class="footer__copyright">Copyright&copy; {{ "now" | date: "%Y" }} Esteemed. <a href="/privacy-policy/">Privacy</a> | <a href="/terms-use/">Terms</a></div>
     </div>
   </div>
 </footer>
