EST-42: Sticky header

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<div data-collapse="large" data-animation="default" data-duration="400" class="hero-menu w-nav">
+<div data-collapse="large" data-animation="default" data-duration="400" class="hero-menu w-nav sticky is-stuck is-at-top">
   <div class="grid-container">
     <div class="grid-x align-justify align-middle">
       <div class="w-nav-brand w--current large-shrink grid-x align-justify">
