--- a/_css/layout/_navigation.scss
+++ b/_css/layout/_navigation.scss
@@ -3,14 +3,55 @@
 }
 
 .w-nav {
+  background: $white;
   padding: $spacing 0;
+  transition: .3s;
 
-  @include breakpoint(medium down) {
-    background: $white;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
+  img.logo {
+
+    @include breakpoint(large up) {
+      height: 46px;
+      transition: .3s;
+    }
+  }
+
+  &.shrink {
+
+    @include breakpoint(large up) {
+      box-shadow: 0 2px 2px -2px $light-gray;
+      padding: 0.7em 0;
+    }
+
+    img.logo {
+
+      @include breakpoint(large up) {
+        height: 30px;
+      }
+    }
+
+    #main-navigation__content {
+
+      ul {
+
+        li {
+
+          a {
+
+            @include breakpoint(large up) {
+              font-size: 0.9375rem;
+              padding: 0.35rem 1rem;
+            }
+
+            &.button {
+
+              @include breakpoint(large up) {
+                padding: 0.75rem 1.2rem;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 
   > .grid-container {
@@ -65,6 +106,10 @@
 
   #main-navigation {
 
+    @include breakpoint(medium down) {
+      display: none;
+    }
+
     &__button {
 
       button {
@@ -113,6 +158,7 @@
           color: $black;
           font-size: 1.25rem;
           font-weight: $global-weight-normal;
+          transition: .3s;
 
           @include breakpoint(medium down) {
             padding: 30px 10px;
