Replace category collection with autopages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,13 @@ layout: default
 ---
 
 {% assign author = site.authors | where: 'relative_path', page.author | first %}
-{% assign categories = site.categories | where: 'categories', page.categories %}
+{% assign category = page.categories | first %}
 
 <div class="grid-container breadcrumb">
   <a href="/blogs/">Blog</a>
-  {% if categories %}
-  {% assign breadcrumb = categories | first %}
+  {% if category %}
   <span class="breadcrumb--chevron">></span>
-  <a href="{{ breadcrumb.url }}">{{ breadcrumb.title }}</a>
+  <a href="/blogs/category/{{ category | trim | downcase }}/">{{ category }}</a>
   {% endif %}
 </div>
 
@@ -32,8 +31,8 @@ layout: default
       <div class="post-categories grid-x align-center-middle">
         <div class="cell large-8">
           <span class="post-categories--title">Category: </span>
-          {% for category in categories %}
-          <a href="{{ category.url }}">{{ category.title }}</a>
+          {% for category in page.categories %}
+          <a href="/blogs/category/{{ category }}/">{{ category }}</a>
           {% unless forloop.last %}<span class="space-between">,</span>{% endunless %}
           {% endfor %}
         </div>
