--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-{% assign posts = site.posts | where:'categories', page.slug %}
 <div class="grid-container">
   <div class="grid-x align-top">
-    <h1>{{ page.title }} Posts</h1>
-    {% for post in posts %}
+    <h1>{{ page.autopage.display_name }} Posts</h1>
+    {% for post in paginator.posts %}
+    {% assign author = site.authors | where: 'relative_path', post.author | first %}
     <div class="cell" style="background:#efefef; margin: 10px 0; padding: 10px">
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <address class="author"><a href="{{ author.url }}">{{ author.title }}</a></address>
       {{ post.excerpt | strip_html }}
     </div>
     {% endfor %}
