--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,15 +43,15 @@ layout: default
           <div class="blog-post__author-block--container grid-x cell large-8">
             <div class="cell medium-3">
               <div class="blog-post__author-block--image">
-                <a href="{{ author.url }}"><img src="{{ author.image }}"></a>
+                <a href="{{ author.url }}"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}"></a>
               </div>
             </div>
             <div class="cell medium-9">
               <div class="blog-post__author-block--name">
-                <a href="{{ author.url }}">{{ author.title }}</a>
+                <a href="/blogs/author/{{ page.author }}">{{ author.name }}</a>
               </div>
               <div class="blog-post__author-block--bio">
-                {{ author.content }}
+                {{ author.bio }}
               </div>
             </div>
           </div>
