--- a/_css/components/_card.scss
+++ b/_css/components/_card.scss
@@ -83,3 +83,92 @@
     }
   }
 }
+
+.blog-card {
+  margin: 1rem 0;
+  transition: .3s;
+
+  &:hover {
+    opacity: .9;
+
+    .blog-card__wrapper {
+
+      @include breakpoint(medium) {
+        box-shadow: 0px 3px 15px rgba(0,0,0,0.3);
+      }
+    }
+  }
+
+  &__wrapper {
+    background-color: $blue--btn;
+    border-radius: 15px;
+    display: flex;
+    height: 600px;
+    overflow: hidden;
+    position: relative;
+    transition: .3s;
+
+    @include breakpoint(medium only) {
+      height: 400px;
+    }
+
+    @include breakpoint(small only) {
+      height: 350px;
+    }
+
+    h2 {
+      color: $white;
+    }
+
+    &--image {
+      height: 100%;
+      left: 0;
+      opacity: .5;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+  }
+
+  &__bottom {
+    align-self: flex-end;
+    background-image: linear-gradient(to bottom, rgba(71,90,163,0), rgba(71,90,163,1));
+    color: $white;
+    font-family: $font-lato;
+    padding: 10rem 2rem 2rem 2rem;
+    position: relative;
+    z-index: 1;
+
+    @include breakpoint(medium down) {
+      padding: 5rem 1rem 1rem 1rem;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      font-weight: bold;
+
+      @include breakpoint(medium down) {
+        font-size: 1.15rem;
+      }
+    }
+
+    &--date,
+    &--categories {
+
+      @include breakpoint(medium down) {
+        display: block;
+      }
+    }
+
+    &--line {
+
+      @include breakpoint(medium down) {
+        display: none;
+      }
+    }
+
+    &--categories {
+      text-transform: capitalize;
+    }
+  }
+}
