EST-47: Add newsletter code in head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,5 @@
   {% if site.google_analytics and jekyll.environment == 'production' %}
   {%- include analytics.html -%}
   {% endif %}
+  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ec5b82da5b213df9999d28215/0673e7ae85abc061ee3a624af.js");</script>
 </head>
