--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -2,17 +2,46 @@
 layout: default
 ---
 
-<div class="grid-container">
+<div class="grid-container category-post-item">
   <div class="grid-x align-top">
-    <h1>{{ page.autopage.display_name }} Posts</h1>
+    <h1 class="u-text-bold main-title text-center">{{ page.autopage.display_name }} Posts</h1>
+  </div>
+  <div class="grid-x align-top grid-padding-x blog-all-posts">
     {% for post in paginator.posts %}
     {% assign author = site.authors | where: 'relative_path', post.author | first %}
-    <div class="cell" style="background:#efefef; margin: 10px 0; padding: 10px">
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <address class="author"><a href="{{ author.url }}">{{ author.title }}</a></address>
-      {{ post.excerpt | strip_html }}
-    </div>
+    <a href="{{ post.url }}" class="blog-card cell small-6 medium-4">
+        <div class="blog-card__wrapper">
+          {% if post.image %}
+            <div class="blog-card__wrapper--image" style="background-image: url('{{ post.image }}'); background-size: cover;">
+            </div>
+          {% else %}
+            <div class="blog-card__wrapper--image" style="background-image: url('/img/blog-performance.jpg'); background-size: cover;">
+            </div>
+          {% endif %}
+          <div class="blog-card__bottom">
+            <h2>{{ post.title }}</h2>
+            <div class="blog-card__bottom--author">{{ author.name }}</div>
+            <div class="blog-card__bottom--date-categories">
+              <span class="blog-card__bottom--date">{{ post.date | date: "%b %d, %Y" }}</span>
+            </div>
+          </div>
+        </div>
+      </a>
     {% endfor %}
     </div>
+    {% if paginator.total_pages > 1 %}
+    <ul class="pager">
+      {% if paginator.previous_page %}
+      <li class="previous">
+          <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; Newer Posts</a>
+      </li>
+      {% endif %}
+      {% if paginator.next_page %}
+      <li class="next">
+          <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts &rarr;</a>
+      </li>
+      {% endif %}
+    </ul>
+    {% endif %}
   </div>
 </div>
