--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -8,7 +8,7 @@ layout: default
   </div>
   <div class="grid-x align-top grid-padding-x blog-all-posts">
     {% for post in paginator.posts %}
-    {% assign author = site.authors | where: 'relative_path', post.author | first %}
+    {% assign author = site.data.authors[post.author] %}
     <a href="{{ post.url }}" class="blog-card cell small-6 medium-4">
         <div class="blog-card__wrapper">
           {% if post.image %}
