--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,10 @@ layout: default
 {% assign category = page.categories | first %}
 
 <div class="grid-container breadcrumb">
-  <a href="/blogs/">Blog</a>
+  <a href="/blog/">Blog</a>
   {% if category %}
   <span class="breadcrumb--chevron">></span>
-  <a href="/blogs/category/{{ category | trim | downcase }}/">{{ category }}</a>
+  <a href="/blog/category/{{ category | trim | downcase }}/">{{ category }}</a>
   {% endif %}
 </div>
 
@@ -17,7 +17,7 @@ layout: default
   <div class="grid-x align-top">
     <div class="cell">
       <h1>{{ page.title }}</h1>
-      <address class="blog-post__author">By <span><a href="/blogs/author/{{ page.author }}/">{{ author.name }}</a></span></address>
+      <address class="blog-post__author">By <span><a href="/blog/author/{{ page.author }}/">{{ author.name }}</a></span></address>
       <div class="blog-post__date">{{ page.date | date: "%m.%-d.%Y" }}</div>
 
       <div class="blog-post__content">
@@ -44,7 +44,7 @@ layout: default
         <div class="cell large-8">
           <span class="post-categories--title">Category: </span>
           {% for category in page.categories %}
-          <a href="/blogs/category/{{ category }}/">{{ category }}</a>
+          <a href="/blog/category/{{ category }}/">{{ category }}</a>
           {% unless forloop.last %}<span class="space-between">,</span>{% endunless %}
           {% endfor %}
         </div>
@@ -55,12 +55,12 @@ layout: default
           <div class="blog-post__author-block--container grid-x cell large-8">
             <div class="cell medium-3">
               <div class="blog-post__author-block--image">
-                <a href="/blogs/author/{{ page.author }}/"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}"></a>
+                <a href="/blog/author/{{ page.author }}/"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}"></a>
               </div>
             </div>
             <div class="cell medium-9">
               <div class="blog-post__author-block--name">
-                <a href="/blogs/author/{{ page.author }}/">{{ author.name }}</a>
+                <a href="/blog/author/{{ page.author }}/">{{ author.name }}</a>
               </div>
               <div class="blog-post__author-block--bio">
                 {{ author.bio }}
