EST-26: Add sign up block

--- a/_css/foundation/_settings.scss
+++ b/_css/foundation/_settings.scss
@@ -83,6 +83,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $blue--bg: #485aa3;
 $blue--btn: #475aa3;
+$blue--btn-hover: #3c4d8b;
 $blue--header: #5b6bac;
 $orange: #f29d4b;
 $orange--btn: #da7d3b;
