EST-52: Embed Sales Slide Deck

--- a/_css/foundation/_foundation.scss
+++ b/_css/foundation/_foundation.scss
@@ -65,6 +65,8 @@
 @include foundation-orbit;
 @include foundation-pagination;
 @include foundation-progress-bar;
+@include foundation-prototype-sizing;
+@include foundation-prototype-spacing;
 @include foundation-slider;
 @include foundation-sticky;
 @include foundation-reveal;
