EST-26: Sign up block fixes

--- a/_css/foundation/_settings.scss
+++ b/_css/foundation/_settings.scss
@@ -75,6 +75,7 @@ $foundation-palette: (
   warning: #ffae00,
   alert: #cc4b37,
 );
+$lightest-gray: #f7f7f9;
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
