--- a/_css/components/_sign-up-block.scss
+++ b/_css/components/_sign-up-block.scss
@@ -1,6 +1,12 @@
 #mc_embed_signup {
+  background: $lightest-gray;
+
+  @include breakpoint(medium down) {
+    padding-bottom: 3rem;
+  }
 
   h2 {
+    margin-bottom: 2rem !important;
     
     @include breakpoint(small only) {
       font-size: 1.25rem !important;
@@ -10,7 +16,11 @@
   .sign-up-subtitle {
     font-family: $font-lato;
     font-size: 1.25rem;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
+
+    @include breakpoint(medium down) {
+      margin-bottom: 2rem;
+    }
   }
 
   button {
@@ -28,7 +38,8 @@
   }
 
   input[type="email"] {
-    border: 1px solid $medium-gray !important;
+    border: transparent !important;
+    color: $dark-gray !important;
     font-family: $font-lato !important;
     font-size: 1.125rem !important;
     max-width: 100% !important;
@@ -37,12 +48,22 @@
     @include breakpoint(medium down) {
       width: 100% !important;
     }
+
+    &::placeholder {
+      color: $dark-gray !important;
+    }
   }
 
   .sign-up-image {
 
-    @include breakpoint(small only) {
+    @include breakpoint(medium down) {
       order: 1;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    @include breakpoint(large) {
+      text-align: right;
     }
   }
 
@@ -52,8 +73,40 @@
       margin-top: 7rem;
     }
 
-    @include breakpoint(small only) {
+    @include breakpoint(medium down) {
       order: 2;
+    }
+  }
+
+  img {
+
+    @include breakpoint(medium down) {
+      max-width: 400px;
+    }
+
+    @include breakpoint(large) {
+      width: 85%;
+    }
+  }
+
+  .input-mobile-wrapper {
+
+    @include breakpoint(medium down) {
+      align-items: center;
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 500px;
+
+      input,
+      button {
+        margin-bottom: 0 !important;
+        margin-top: 0 !important;
+      }
+
+      button {
+        padding: 0.85em 1.7em !important;
+      }
     }
   }
 }
