--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,15 @@
           </div>
         </div>
         <div class="footerbottom__second cell small-6 large-3">
+          <div class="footerbottom__first--content">
+            <h6>Resources</h6>
+            <ul>
+              <li><a href="/partners/partner-registration/">Partner With Us</a></li>
+              <li><a href="https://trello.com/b/kuk5ahtY/esteemed-open-product-roadmap" target="_blank">Open Product Roadmap</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footerbottom__third cell small-6 large-3">
           <h6>Support</h6>
           <ul>
             <li><a class="mail" href="mailto:support@esteemed.io">support@esteemed.io</a></li>
