--- a/_includes/sign-up-block.html
+++ b/_includes/sign-up-block.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="align-self-bottom cell small-12 large-6 sign-up-image">
-        <img src="/img/sign-up-image.svg" alt="" class="logo" />
+        <img src="/img/sign-up-image.png" alt="" class="logo" />
       </div>
     </div>
   </div>
