--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;500;700&family=Poppins:wght@300;400;500;600;700&family=Satisfy&display=swap" rel="stylesheet">
-  {% if site.google_analytics and jekyll.environment == 'production' %}
+  {% if jekyll.environment == 'production' %}
   {%- include analytics.html -%}
   {% endif %}
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ec5b82da5b213df9999d28215/0673e7ae85abc061ee3a624af.js");</script>
