--- a/_layouts/author_index.html
+++ b/_layouts/author_index.html
@@ -7,7 +7,7 @@ layout: default
 <div class="grid-container author-post-item">
   <div class="grid-x align-top">
     <h1 class="u-text-bold main-title text-center"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}" />{{ author.name }}'s Posts</h1>
-    <div class="heading-subtitle">{{ author.bio }}</div>
+    <div class="heading-subtitle">{{ author.bio | markdownify }}</div>
   </div>
   <div class="grid-x align-top grid-padding-x blog-all-posts">
     {% for post in posts %}
