--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -86,6 +86,10 @@ body {
     color: $black;
     margin-top: 2rem;
 
+    h2, h2 > strong {
+      font-size: 2.1875rem;
+    }
+
     &--image {
       margin-bottom: 2rem;
       text-align: center;
