Fix misplaced quote in default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 {% include head.html %}
-<body class="body{%- if page.class %} {{ page.class }}"{%- endif -%}>
+<body class="body{%- if page.class %} {{ page.class }}{%- endif -%}">
   {% include navigation.html %}
   {{ content }}
   {% include footer.html %}
