--- a/_includes/sign-up-block.html
+++ b/_includes/sign-up-block.html
@@ -10,7 +10,7 @@
   <div class="grid-container">  
     <div class="grid-x grid-padding-x" id="mc_embed_signup_scroll">
       <div class="align-self-middle cell small-12 large-6 sign-up-text">
-        <h2>Keep up with the star</h2>
+        <h2>Keep up with <i>The Star</i></h2>
         <div class="sign-up-subtitle">Stay up to date. Learn what it takes to achieve and maintain career stardom with posts from your Esteemed colleagues.</div>
         <div class="input-mobile-wrapper">
           <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
