EST-57: Circle author image and width updates

--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -145,6 +145,15 @@ body {
       @include breakpoint(medium up) {
         padding-right: 1rem;
       }
+
+      img {
+        border-radius: 100%;
+
+        @include breakpoint(small only) {
+          max-width: 100%;
+          width: 250px;
+        }
+      }
     }
 
     &--name {
