--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,12 +53,12 @@ layout: default
       <div class="blog-post__author-block">
         <div class="grid-x align-center-middle">
           <div class="blog-post__author-block--container grid-x cell large-8">
-            <div class="cell medium-3">
+            <div class="cell medium-4 large-3">
               <div class="blog-post__author-block--image">
                 <a href="/blog/author/{{ page.author }}/"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}"></a>
               </div>
             </div>
-            <div class="cell medium-9">
+            <div class="cell medium-8 large-9">
               <div class="blog-post__author-block--name">
                 <a href="/blog/author/{{ page.author }}/">{{ author.name }}</a>
               </div>
