EST-59: Create schedule a demo page

--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -278,3 +278,13 @@ body {
     margin-top: 0 !important;
   }
 }
+
+.page__schedule-demo {
+
+  .calendly-inline-widget {
+
+    @include breakpoint(small only) {
+      height: 630px !important;
+    }
+  }
+}
