--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -57,21 +57,79 @@ body {
     text-align: center;
   }
 
+  + footer {
+
+    @include breakpoint(small only) {
+      padding-bottom: 3.5rem;
+    }
+  }
+
   &__share-buttons {
 
     .a2a_svg, .a2a_count {
       border-radius: 0 !important;
     }
 
+    a {
+
+      &:not(:last-child) {
+
+        @include breakpoint(medium) {
+          margin-bottom: 0.25rem;
+        }
+      }
+
+      &.a2a_button {
+
+        &_facebook {
+
+          &,
+          svg {
+            background: $dark-blue;
+          }
+        }
+
+        &_twitter {
+
+          &,
+          svg {
+            background: $light-blue;
+          }
+        }
+
+        &_linkedin {
+
+          &,
+          svg {
+            background: $button-blue;
+          }
+        }
+
+        &_email {
+
+          &,
+          svg {
+            background: $button-hover-blue;
+          }
+        }
+      }
+    }
+
     @include breakpoint(small only) {
+      bottom: 0;
       display: flex;
       justify-content: center;
-      margin-bottom: 1rem;
-      position: static !important;
+      margin-bottom: 0;
+      padding: 0 !important;
+      top: initial !important;
+      width: calc(100% - 6.375rem);
 
       a {
-        margin-left: 0.5rem;
-        margin-right: 0.5rem;
+        flex-grow: 1;
+
+        .a2a_svg {
+          margin: 0 auto;
+        }
       }
     }
   }
