--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,8 +14,8 @@ layout: default
 </div>
 
 <div class="grid-container blog-post">
-  <div class="grid-x align-top">
-    <div class="cell">
+  <div class="grid-x align-center-middle">
+    <div class="cell large-8">
       <h1>{{ page.title }}</h1>
       <address class="blog-post__author">By <span><a href="/blog/author/{{ page.author }}/">{{ author.name }}</a></span></address>
       <div class="blog-post__date">{{ page.date | date: "%m.%-d.%Y" }}</div>
@@ -40,31 +40,27 @@ layout: default
         {{ page.content | markdownify }}
       </div>
 
-      <div class="post-categories grid-x align-center-middle">
-        <div class="cell large-8">
-          <span class="post-categories--title">Category: </span>
-          {% for category in page.categories %}
-          <a href="/blog/category/{{ category }}/">{{ category }}</a>
-          {% unless forloop.last %}<span class="space-between">,</span>{% endunless %}
-          {% endfor %}
-        </div>
+      <div class="post-categories">
+        <span class="post-categories--title">Category: </span>
+        {% for category in page.categories %}
+        <a href="/blog/category/{{ category }}/">{{ category }}</a>
+        {% unless forloop.last %}<span class="space-between">,</span>{% endunless %}
+        {% endfor %}
       </div>
 
       <div class="blog-post__author-block">
-        <div class="grid-x align-center-middle">
-          <div class="blog-post__author-block--container grid-x cell large-8">
-            <div class="cell medium-4 large-3">
-              <div class="blog-post__author-block--image">
-                <a href="/blog/author/{{ page.author }}/"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}"></a>
-              </div>
+        <div class="blog-post__author-block--container grid-x">
+          <div class="cell medium-4 large-3">
+            <div class="blog-post__author-block--image">
+              <a href="/blog/author/{{ page.author }}/"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}"></a>
             </div>
-            <div class="cell medium-8 large-9">
-              <div class="blog-post__author-block--name">
-                <a href="/blog/author/{{ page.author }}/">{{ author.name }}</a>
-              </div>
-              <div class="blog-post__author-block--bio">
-                {{ author.bio | markdownify }}
-              </div>
+          </div>
+          <div class="cell medium-8 large-9">
+            <div class="blog-post__author-block--name">
+              <a href="/blog/author/{{ page.author }}/">{{ author.name }}</a>
+            </div>
+            <div class="blog-post__author-block--bio">
+              {{ author.bio | markdownify }}
             </div>
           </div>
         </div>
