EST-66: Add video, add slider, some spacing updates

--- a/_css/esteemed.scss
+++ b/_css/esteemed.scss
@@ -7,4 +7,5 @@
 @import 'layout/footer';
 @import 'layout/sections';
 @import 'components/card';
+@import 'components/testimonial';
 @import 'components/sign-up-block';
