EST-67: Update logos, buttons, schedule demo changes

--- a/_css/foundation/_settings.scss
+++ b/_css/foundation/_settings.scss
@@ -316,8 +316,8 @@ $breadcrumbs-item-separator-color: $medium-gray;
 
 $button-font-family: inherit;
 $button-font-weight: null;
-$button-padding: 1.4em 1.7em;
-$button-padding-small: 1.1875rem 1.3125rem;;
+$button-padding: 1rem 1.25rem;
+$button-padding-small: 0.75rem 1.2rem;
 $button-margin: 0 0 $global-margin 0;
 $button-fill: solid;
 $button-background: $blue--btn;
