--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="footertop">
         <div class="footer__logo">
           <a href="/" class="w-logo">
-            <img src="/img/esteemed-logo-color.png" alt="" class="logo" />
+            <img src="/img/esteemed-logo-color.svg" alt="" class="logo" />
           </a>
         </div>
       </div>
