--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
     <div class="grid-x align-justify align-middle">
       <div class="w-nav-brand w--current large-shrink grid-x align-justify">
         <a href="/" class="w-logo">
-          <img src="/img/esteemed-bw-logo.png" alt="" class="logo">
+          <img src="/img/esteemed-bw-logo.svg" alt="" class="logo">
         </a>
       </div>
       <div id="main-navigation__button" class="hide-for-large">
