--- a/_css/layout/_navigation.scss
+++ b/_css/layout/_navigation.scss
@@ -22,10 +22,15 @@
   }
 
   img.logo {
+    max-width: 12.25rem;
 
     @include breakpoint(large up) {
       height: 46px;
       transition: .3s;
+    }
+
+    @include breakpoint(medium down) {
+      height: 30px;
     }
   }
 
@@ -40,6 +45,7 @@
 
       @include breakpoint(large up) {
         height: 30px;
+        max-width: 8rem;
       }
     }
 
@@ -59,7 +65,7 @@
             &.button {
 
               @include breakpoint(large up) {
-                padding: 0.75rem 1.2rem;
+                padding: $button-padding-small;
               }
             }
           }
@@ -111,10 +117,6 @@
 
     .button {
       padding: $button-padding;
-
-      @include breakpoint(large up) {
-        padding: $button-padding-small;
-      }
     }
   }
 
