[EST-71] Fix issue with display related pasts for single author

--- a/_layouts/author_index.html
+++ b/_layouts/author_index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% assign author = site.data.authors[page.author] %}
-{% assign posts = site.posts | where:'author', author %}
+{% assign posts = site.posts | where:'author', page.author %}
 <div class="grid-container author-post-item">
   <div class="grid-x align-top">
     <h1 class="u-text-bold main-title text-center"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}" />{{ author.name }}'s Posts</h1>
