--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,7 @@
             <h6>About</h6>
             <ul>
               <li><a href="/company/">Company</a></li>
+              <li><a href="/contact/">Contact</a></li>
               <li><a class="mail" href="mailto:press@esteemed.io">press@esteemed.io</a></li>
             </ul>
           </div>
