--- a/_css/base/_utilities.scss
+++ b/_css/base/_utilities.scss
@@ -18,6 +18,10 @@
   background-color: $blue--bg;
 }
 
+.u-bg-lighter-gray {
+  background-color: $lighter-gray
+}
+
 .u-bg-gray {
   background-color: $gray--bg;
 }
@@ -45,4 +49,10 @@
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-poppins;
+}
+
+.small-margin-bottom-2 {
+  @include breakpoint(small only) {
+    margin-bottom: 2rem;
+  }
 }
