--- a/_css/components/_testimonial.scss
+++ b/_css/components/_testimonial.scss
@@ -9,6 +9,8 @@
 
     @include breakpoint(medium down) {
       margin-bottom: 2rem;
+      margin-left: 0;
+      margin-right: 0;
     }
 
     button {
@@ -64,7 +66,6 @@
   }
 
   &-container {
-
     &__wrapper {
       display: flex;
       font-family: $font-poppins;
@@ -98,13 +99,11 @@
 
         &,
         * {
-
           &:focus {
             outline: none;
           }
         }
       }
-
     }
   }
 }
