--- a/_css/foundation/_settings.scss
+++ b/_css/foundation/_settings.scss
@@ -76,6 +76,7 @@ $foundation-palette: (
   alert: #cc4b37,
 );
 $lightest-gray: #f7f7f9;
+$lighter-gray: #f3f3f3;
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
@@ -83,14 +84,14 @@ $gray--bg: #dee3e8;
 $black: #0a0a0a;
 $white: #fefefe;
 $blue--bg: #485aa3;
-$blue--btn: #475aa3;
+$blue--btn: #4389C8;
 $blue--btn-hover: #3c4d8b;
 $blue--header: #5b6bac;
 $orange: #f29d4b;
 $orange--btn: #da7d3b;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'Lato', sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
